# api_planner_AI

./: main.py  pyproject.toml
app/: database.py
app/api/routes/: plans.py
app/models/: __init__.py  plan.py  task.py
app/schemas/: plan.py  task.py
app/services/: planner_service.py
resource/: ImplementationPlan.md
